--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -94,21 +94,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Name: dask\n",
+      "Name: cody\n",
       "\n",
       "vNET RG: cody-eastus-rg\n",
       "vNET name: wifi\n",
       "vNET subnet name: 5GHz\n",
       "\n",
-      "Compute target: dask-ct\n",
-      "Environment name: dask-env\n",
+      "Compute target: cody-ct\n",
+      "Environment name: cody-env\n",
       "\n"
      ]
     }
    ],
    "source": [
     "### name\n",
-    "name        = 'dask'             # replace or not to replace\n",
+    "name        = 'cody'             # replace or not to replace\n",
     "\n",
     "### vnet settings\n",
     "vnet_rg     = ws.resource_group  # replace if needed\n",
@@ -149,20 +149,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating\n",
-      "Succeeded\n",
-      "AmlCompute wait for completion finished\n",
-      "\n",
-      "Minimum number of nodes requested have been provisioned\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-eastus-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
+       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg'), name=cody-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-eastus-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/cody-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
       ]
      },
      "execution_count": 4,
@@ -206,11 +195,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "codefileshare = 'codefileshare'\n",
+    "filesharename = 'codefileshare'\n",
     "\n",
-    "if codefileshare not in ws.datastores:\n",
-    "    Datastore.register_azure_file_share(ws, codefileshare,\n",
-    "                                        'code-391ff5ac-6576-460f-ba4d-7e03433c68b6',                    \n",
+    "if filesharename not in ws.datastores:\n",
+    "    Datastore.register_azure_file_share(ws, filesharename,\n",
+    "                                        'code-391ff5ac-6576-460f-ba4d-7e03433c68b6', # lol                    \n",
     "                                        account_name = ws.datastores['workspacefilestore'].account_name, \n",
     "                                        account_key  = ws.datastores['workspacefilestore'].account_key   \n",
     "                                       )"
@@ -314,13 +303,13 @@
      "output_type": "stream",
      "text": [
       "####################### Waiting for scheduler node's IP ########################\n",
-      "..................................................................................................\n",
+      "....................\n",
       "\n",
       "\n",
       "########################### Scheduler: 10.0.0.5:8786 ###########################\n",
       "############################### On the same VNET ###############################\n",
       "########################### Connections established ############################\n",
-      "############################ Scaling to 10 workers #############################\n",
+      "############################# Scaling to 1 workers #############################\n",
       "############################### Scaling is done ################################\n"
      ]
     }
@@ -330,7 +319,6 @@
     "                         ct, \n",
     "                         env, \n",
     "                         jupyter=True, \n",
-    "                         initial_node_count=10,\n",
     "                         datastores=[ws.datastores[datastore] for datastore in ws.datastores]\n",
     "                        )"
    ]
@@ -343,11 +331,11 @@
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1584230495_d0acb81c</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1584230495_d0acb81c?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1584241485_a696ee8f</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1584241485_a696ee8f?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: dask-cloudprovider,\n",
-       "Id: dask-cloudprovider_1584230495_d0acb81c,\n",
+       "Id: dask-cloudprovider_1584241485_a696ee8f,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
@@ -367,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(25) # need more than default quota for this "
+    "cluster.scale(30) # need more than default quota for this "
    ]
   },
   {
@@ -378,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c1c9927390a4f76abac7e398f0f588b",
+       "model_id": "5db0b6c02f6641f9b176415c5bca9cc4",
        "version_major": 2,
        "version_minor": 0
       },
