--- a/02.cpu-cluster-demo.ipynb
+++ b/02.cpu-cluster-demo.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = Run.get_context()\n",
+    "run = Run.get_context()\n"
    ]
   },
   {
