use AzureML curated environment

--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg')"
+       "Workspace.create(name='AzureML-UKS', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-training')"
       ]
      },
      "execution_count": 2,
@@ -94,30 +94,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Name: cody\n",
+      "Name: dask\n",
       "\n",
-      "vNET RG: cody-eastus-rg\n",
-      "vNET name: wifi\n",
-      "vNET subnet name: 5GHz\n",
+      "vNET RG: cody-training\n",
+      "vNET name: vnet\n",
+      "vNET subnet name: default\n",
       "\n",
-      "Compute target: cody-ct\n",
-      "Environment name: cody-env\n",
+      "Compute target: dask-ct\n",
       "\n"
      ]
     }
    ],
    "source": [
     "### name\n",
-    "name        = 'cody'             # replace or not to replace\n",
+    "name        = 'dask'             # replace or not to replace\n",
     "\n",
     "### vnet settings\n",
     "vnet_rg     = ws.resource_group  # replace if needed\n",
-    "vnet_name   = f'wifi'            # replace if needed\n",
-    "subnet_name = '5GHz'             # replace if needed\n",
+    "vnet_name   = 'vnet'             # replace if needed\n",
+    "subnet_name = 'default'          # replace if needed\n",
     "\n",
     "### azure ml names \n",
     "ct_name     = f'{name}-ct'       # replace if desired\n",
-    "env_name    = f'{name}-env'      # replace if desired\n",
     "\n",
     "### trust but verify\n",
     "verify = f'''\n",
@@ -128,7 +126,6 @@
     "vNET subnet name: {subnet_name}\n",
     "\n",
     "Compute target: {ct_name}\n",
-    "Environment name: {env_name}\n",
     "'''\n",
     "\n",
     "print(verify)"
@@ -149,9 +146,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "\n",
+      "Minimum number of nodes requested have been provisioned\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg'), name=cody-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-eastus-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/cody-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
+       "AmlCompute(workspace=Workspace.create(name='AzureML-UKS', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-training'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-training/providers/Microsoft.MachineLearningServices/workspaces/AzureML-UKS/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=uksouth, tags=None)"
       ]
      },
      "execution_count": 4,
@@ -256,57 +264,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "packages = ['mpi4py',\n",
-    "            'distributed',\n",
-    "            'dask[complete]',\n",
-    "            'dask-ml[complete]',\n",
-    "            'fastparquet',\n",
-    "            'pyarrow',\n",
-    "            'jupyterlab',\n",
-    "            'joblib',\n",
-    "            'notebook',\n",
-    "            'adlfs', \n",
-    "            'fsspec', \n",
-    "            'azureml-sdk',\n",
-    "            'lz4']\n",
-    "\n",
-    "env = Environment(name=env_name)\n",
-    "\n",
-    "for package in packages:\n",
-    "    env.python.conda_dependencies.add_pip_package(package)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "############################## Setting up cluster ##############################\n",
-      "########################## Submitting the experiment ###########################\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING - This compute target type doesn't support non-Docker runs; overriding run configuration enable Docker.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "####################### Waiting for scheduler node's IP ########################\n",
-      "....................\n",
+      ".......................................\n",
       "\n",
       "\n",
-      "########################### Scheduler: 10.0.0.5:8786 ###########################\n",
+      "########################## Scheduler: 172.23.0.5:8786 ##########################\n",
       "############################### On the same VNET ###############################\n",
       "########################### Connections established ############################\n",
       "############################# Scaling to 1 workers #############################\n",
@@ -317,7 +285,7 @@
    "source": [
     "cluster = AzureMLCluster(ws, \n",
     "                         ct, \n",
-    "                         env, \n",
+    "                         ws.environments['AzureML-Dask-CPU'], \n",
     "                         jupyter=True, \n",
     "                         datastores=[ws.datastores[datastore] for datastore in ws.datastores]\n",
     "                        )"
@@ -325,22 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1584241485_a696ee8f</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1584241485_a696ee8f?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1590968368_a6e01013</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1590968368_a6e01013?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-training/workspaces/AzureML-UKS\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: dask-cloudprovider,\n",
-       "Id: dask-cloudprovider_1584241485_a696ee8f,\n",
+       "Id: dask-cloudprovider_1590968368_a6e01013,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,13 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5db0b6c02f6641f9b176415c5bca9cc4",
+       "model_id": "90a9a0c713ba47fd9066c9055d534c10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
