--- a/local/01.start-cpu-ssh.ipynb
+++ b/local/01.start-cpu-ssh.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "### Enter your name\n",
     "\n",
-    "Enter your name and virtual network information."
+    "Enter your name."
    ]
   },
   {
