--- a/local/01.start-cpu-ssh.ipynb
+++ b/local/01.start-cpu-ssh.ipynb
@@ -36,9 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports\n",
-    "\n",
-    "Import all packages used in this notebook."
+    "## SSH key setup\n",
+    "Setup public and private ssh keys for connecting to the compute target."
    ]
   },
   {
@@ -76,6 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports\n",
+    "\n",
+    "Import all packages used in this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -83,8 +91,8 @@
    "source": [
     "import os\n",
     "\n",
-    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core import Workspace, Experiment, Datastore, Dataset, Environment"
+    "from azureml.core import Workspace, Datastore\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute"
    ]
   },
   {
