swap to use dask-cloudprovider

--- a/local/01.start-cpu-ssh.ipynb
+++ b/local/01.start-cpu-ssh.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --upgrade git+https://github.com/drabastomek/dask-cloudprovider@ssh_devel"
+    "pip install --upgrade dask-cloudprovider"
    ]
   },
   {
