--- a/ci-on-vnet/01.start-cpu-cluster.ipynb
+++ b/ci-on-vnet/01.start-cpu-cluster.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --upgrade git+https://github.com/drabastomek/dask-cloudprovider"
+    "pip install --upgrade dask-cloudprovider"
    ]
   },
   {
