add idle timeout kwarg

--- a/local/01.start-cpu.ipynb
+++ b/local/01.start-cpu.ipynb
@@ -108,13 +108,14 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "...............................................\n\n\n"
+     "text": ".....................................................\n\n\n"
     }
    ],
    "source": [
     "vm_size = 'STANDARD_DS13_V2'\n",
+    "timeout = 7200 \n",
     "\n",
-    "cluster = AzureMLCluster(ws, vm_size=vm_size)"
+    "cluster = AzureMLCluster(ws, vm_size=vm_size, scheduler_idle_timeout=timeout)"
    ]
   },
   {
@@ -125,8 +126,8 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Run(Experiment: dask-cloudprovider,\nId: dask-cloudprovider_1594062229_11691a2c,\nType: azureml.scriptrun,\nStatus: Running)",
-      "text/html": "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1594062229_11691a2c</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1594062229_11691a2c?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/AzureML\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+      "text/plain": "Run(Experiment: dask-cloudprovider,\nId: dask-cloudprovider_1594078307_a1c7c95e,\nType: azureml.scriptrun,\nStatus: Running)",
+      "text/html": "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1594078307_a1c7c95e</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1594078307_a1c7c95e?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/AzureML\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
      },
      "metadata": {},
      "execution_count": 5
@@ -157,7 +158,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fad8df95c5fb4a06886f23bc1f778992"
+       "model_id": "aa55b028ed2f477094626667a53d1a49"
       }
      },
      "metadata": {}
