--- a/local/01.start-cpu.ipynb
+++ b/local/01.start-cpu.ipynb
@@ -81,7 +81,7 @@
     "vm_size = 'STANDARD_DS13_V2'\n",
     "timeout = 7200 \n",
     "\n",
-    "cluster = AzureMLCluster(ws, vm_size=vm_size, scheduler_idle_timeout=timeout, jupyter=True)"
+    "cluster = AzureMLCluster(ws, vm_size=vm_size, scheduler_idle_timeout=timeout, jupyter=True, show_output=True)"
    ]
   },
   {
@@ -137,7 +137,7 @@
   "kernelspec": {
    "display_name": "Python 3.8.5 64-bit ('dkdc': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1598060503196"
+   "name": "python_defaultSpec_1598066858932"
   },
   "language_info": {
    "codemirror_mode": {
