switch to pip install --upgrade dask-cloudprovider

--- a/local/01.start-cpu.ipynb
+++ b/local/01.start-cpu.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "pip install --upgrade git+https://github.com/FredFLi/dask-cloudprovider"
+    "pip install --upgrade dask-cloudprovider"
    ]
   },
   {
@@ -137,7 +137,7 @@
   "kernelspec": {
    "display_name": "Python 3.8.5 64-bit ('dkdc': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1598066858932"
+   "name": "python_defaultSpec_1598368735017"
   },
   "language_info": {
    "codemirror_mode": {
